# Toolcode

androidyuvshow/ANyuvshow/app/: CMakeLists.txt  build.gradle
androidyuvshow/ANyuvshow/app/src/androidTest/java/com/example/tlkg_014/anyuvshow/: ExampleInstrumentedTest.java
androidyuvshow/ANyuvshow/app/src/main/: AndroidManifest.xml
androidyuvshow/ANyuvshow/app/src/main/cpp/: GlUtils.cpp  GlUtils.h  GlView.cpp  GlView.h  JniDefine.h  native-lib.cpp
androidyuvshow/ANyuvshow/app/src/main/java/com/example/tlkg_014/anyuvshow/: MainActivity.java  yuvNatives.java  yuvglRender.java  yuvglsurfaceView.java
androidyuvshow/ANyuvshow/app/src/main/res/layout/: activity_main.xml
androidyuvshow/ANyuvshow/app/src/main/res/values/: strings.xml
androidyuvshow/ANyuvshow/app/src/test/java/com/example/tlkg_014/anyuvshow/: ExampleUnitTest.java
androidyuvshow/FFmpeg_Demo/app/: CMakeLists.txt  build.gradle
androidyuvshow/FFmpeg_Demo/app/src/androidTest/java/huizai/ffmpeg/: ExampleInstrumentedTest.java
androidyuvshow/FFmpeg_Demo/app/src/main/: AndroidManifest.xml
androidyuvshow/FFmpeg_Demo/app/src/main/cpp/: FFmpeg.cpp  FFmpeg.h  GlView.cpp  GlView.h  JniDefine.h  Opensl_io.cpp  Opensl_io.h  XPlayer.cpp
androidyuvshow/FFmpeg_Demo/app/src/main/java/huizai/ffmpeg/: AVPlayer.java  GlView.java  MainActivity.java  MainViewAdapter.java
androidyuvshow/FFmpeg_Demo/app/src/main/java/huizai/ffmpeg/Base/: ABRecyclerViewHolder.java  RecyclerBaseAdapter.java
androidyuvshow/FFmpeg_Demo/app/src/main/res/layout/: activity_main.xml  cell_btn.xml  video_view.xml
androidyuvshow/FFmpeg_Demo/app/src/main/res/values/: colors.xml  strings.xml
androidyuvshow/FFmpeg_Demo/app/src/test/java/huizai/ffmpeg/: ExampleUnitTest.java
androidyuvshow/FFmpeg_Demo/gradle/wrapper/: gradle-wrapper.properties
iosyuvshow/FFmpeg-project 2/FFmpeg-project/: MainViewController.m
iosyuvshow/FFmpeg-project 2/FFmpeg-project.xcodeproj/: project.pbxproj
iosyuvshow/FFmpeg-project 2/FFmpeg-project.xcodeproj/project.xcworkspace/xcuserdata/tlkg-014.xcuserdatad/: UserInterfaceState.xcuserstate
iosyuvshow/FFmpeg-project 2/FFmpeg-project.xcodeproj/xcuserdata/tlkg-014.xcuserdatad/xcschemes/: xcschememanagement.plist
yuvshow/: .cproject  .ninja_deps  .ninja_log  .project  CMakeCache.txt  CMakeLists.txt  Common.h  Makefile  NativeRender.cpp  NativeRender.h  android_gradle_build.json  build.ninja  cmake_install.cmake  native-lib.cpp  readme.md  rules.ninja  run.bat
